# mlops-workshop-pycon24

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer_setup.sh
.github/workflows/: pipeline.yml
exercises/: 01-explore-data.ipynb  02-train-model.ipynb  03-track-experiments.ipynb  04-load-model-for-inference.ipynb  05-create-and-run-api.md
src/turbine_power/: app.py  inference.py
turbine_power/: app.py  model_utils.py
