# For more info about the pyproject.toml file, see:
# https://xebia.com/blog/an-updated-guide-to-setuptools-and-pyproject-toml/

# Run `pip install -e ".[dev]"` to install with dev dependencies.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "turbine-power"
dependencies = [
    "mlflow==2.4.1",
    "scikit-learn==1.3.0",
    "pandas==2.0.3",
    "plotly-express==0.4.1",
    "fastapi==0.100.0",
    "uvicorn==0.22.0",
]
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.name@email.com"},
]
description = "An Example Project"
readme = "README.md"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "jupyter==1.0.0",
    "ipykernel==6.24.0",
    "nbformat==5.9.0",
]
